--- a/AppDev/task2/MySecondApp/app/src/main/res/layout/activity_main.xml
+++ b/AppDev/task2/MySecondApp/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,10 @@
         android:id="@+id/imageView"
         android:adjustViewBounds="false"
         android:layout_marginTop="144dp"
+        android:paddingBottom="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:paddingTop="0dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="68dp" />
